# Medicode_by_Diagnocoder

./: .gitignore  BACKEND_EXPLANATION.md  FRONTEND_BACKEND_CONNECTED.md  QUICK_START.md  backend-analysis.md  backend-architecture.md
mediguide-backend/: Dockerfile  ENV_SETUP_GUIDE.md  ENV_STATUS.md  FIX_STORAGE_BUCKET.md  FRONTEND_INTEGRATION.md  HOW_IT_WORKS.md  OCR_IMPROVEMENTS.md  README.md  check_profiles_schema.py  check_schema_columns.py  check_supabase.py  check_upload_func.py  debug_family_service.py  debug_profile_schema.py  debug_upload.py  entrypoint.sh  env.example  main.py  nixpacks.toml  pyproject.toml  requirements.txt
mediguide-backend/app/: __init__.py  main.py
mediguide-backend/app/ai/: __init__.py  chatbot.py  explanations.py  prompts.py  synthesis.py
mediguide-backend/app/api/: deps.py
mediguide-backend/app/core/: config.py  dependencies.py  security.py
mediguide-backend/app/schemas/: chat.py  common.py  family.py  premium.py  report.py
mediguide-backend/app/services/: chat_service.py  chatbot_service.py  family_service.py  gemini_service.py  premium_service.py  report_service.py  safety_service.py
mediguide-backend/app/supabase/: __init__.py  client.py  storage.py  storage_service.py
mediguide-backend/app/utils/: anonymization.py  image_processing.py  ocr.py
mediguide-backend/supabase/migrations/: 001_create_tables.sql  002_add_family_display_names.sql  002_add_patient_details.sql  002_create_report_summaries.sql  002_create_storage_bucket.sql  004_add_profile_image.sql  (+3 more)
mediguide-backend/tests/: debug_invite.py  test_admin_api.py
(+47 files in other folders)
