[project]
name = "backend-mediguide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "google>=3.0.0",
    "google-generativeai>=0.8.6",
    "numpy<2",
    "openai==1.12.0",
    "opencv-python-headless==4.9.0.80",
    "pillow==11.0.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "pyjwt==2.8.0",
    "pytesseract==0.3.10",
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "requests==2.31.0",
    "supabase==2.9.0",
    "uvicorn[standard]==0.34.0",
]
